<resources>
    <string name="app_name">Central Region Tour App</string>
    <string name="sites">sites</string>
    <string name="hotels">hotels</string>
    <string name="schools">schools</string>
    <string name="festivals">festivals</string>
    <string name="image">image</string>
    <string name="name">name</string>
    <string name="location">location</string>
    <string name="location2">Location:</string>
    <string name="description">description</string>
    <string name="details">Details</string>
    <string name="kakumpark">Kakum National Park</string>
    <string name="kakum">Kakum</string>
    <string name="fortamst">Fort Amsterdam</string>
    <string name="kormantin">Kormantin</string>
    <string name="fortwill">Fort William</string>
    <string name="anomabu">Anomabu</string>
    <string name="capecast">Cape Coast Castle</string>
    <string name="capecoast">Cape Coast</string>
    <string name="elminacast">Elmina Castle</string>
    <string name="elmina">Elmina</string>
    <string name="fortpat">Fort Patience</string>
    <string name="apam">Apam</string>
    <string name="fortnas">Fort Nassau</string>
    <string name="moree">Moree</string>
    <string name="fortco">Fort Coenroadsburg</string>
    <string name="fortvic">Fort Victoria</string>
    <string name="fortgo">Fort Goedo Hoop</string>
    <string name="senyaberaku">Senya Beraku</string>
    <string name="kakum_des" >Kakum National Park is on the coast of southern Ghana near Cape Coast in the Central
        Region, in West Africa. It protects an area of rainforest, home to endangered mammals such as forest
        elephants, bongo antelopes and primates like the Diana monkey. The park is rich in butterflies and birds,
        including African grey parrots and hornbills. The Canopy Walkway, suspended 30 meters above the ground,
        provides treetop views of the forest. \n \n
        Area: 375 km² \n
        Phone: 020 042 0831 \n
        Established: 1992
    </string>
    <string name="fortamst_des">Fort Amsterdam, a World Heritage Site is a fort in Kormantin, Central region,
        Ghana. It was built by the English between 1638 and 1645 as Fort Cormantin or Fort Courmantyne, and
        was captured by admiral Michiel de Ruyter of the Dutch West India Company in 1665, in retaliation for
        the capture of several Dutch forts by the English Admiral Holmes in 1664. It was subsequently made part
        of the Dutch Gold Coast, and remained part of it until the fort was traded with the British in 1868. \n \n
        Year built: 1638 \n
        Phone: 055 149 0761 \n
        Inscription: 1979 (3rd Session)
    </string>
    <string name="fortwill_des">Fort William is a fort in Anomabu, Central Region, Ghana, originally known as Anomabo
        Fort and renamed Fort William in the nineteenth century by its then-commander, Brodie Cruickshank, who
        added one storey to the main building in the days of King William IV.  It was built in 1753 by the British
        after they thwarted a French attempt to establish a fort at the same place. Two earlier forts had been
        established at the same site, one in 1640 by the Dutch, another in 1674 (Fort Charles) by the English.
        Fort Charles was abandoned in the late-seventeenth century. \n \n
        Year built: 1753 \n
        Occupant: United Kingdom
    </string>
    <string name="capecastle_des">Cape Coast Castle (Swedish: Carolusborg) is one of about forty \"slave castles\",
        or large commercial forts, built on the Gold Coast of West Africa (now Ghana) by European traders.
        It was originally a Portuguese \"feitoria\" or trading post, established in 1555. However in 1653 the
        Swedish Africa Company constructed a timber fort there. It originally was a centre for the trade in
        timber and gold. It was later used in the trans-Atlantic slave trade. Other Ghanaian slave castles
        include Elmina Castle and Fort Christiansborg. They were used to hold slaves before they were loaded
        onto ships and sold in the Americas, especially the Caribbean. This \"gate of no return\" was the last
        stop before crossing the Atlantic Ocean \n \n
        Construction started: 1610 \n
        Opened: 1653 \n
        Phone: 057 710 1707
    </string>
    <string name="eliminacastle_des">Elmina Castle was erected by the Portuguese in 1482 as Sao Jorge da Mina
        (St. George of the Mine) Castle, also known simply as Mina (or Feitoria da Mina) in present-day Elmina,
        Ghana (formerly the Gold Coast). It was the first trading post built on the Gulf of Guinea, and the oldest
        European building in existence south of the Sahara. First established as a trade settlement, the castle
        later became one of the most important stops on the route of the Atlantic slave trade. The Dutch seized
        the fort from the Portuguese in 1637, after an unsuccessful attempt to the same extent in 1596, and took
        over all of the Portuguese Gold Coast in 1642. The slave trade continued under the Dutch until 1814.
        In 1872, the Dutch Gold Coast, including the fort, became a possession of Great Britain. \n \n
        The Gold Coast, which is now Ghana, gained its independence in 1957 from Britain, and had control of the
        castle. Elmina Castle is a historical site, and was a major filming location for Werner Herzog\'s 1987
        drama film Cobra Verde. The castle is recognized by UNESCO as a World Heritage Site. \n \n
        Opened: 1482 \n
        Phone: 020 179 6793
    </string>
    <string name="forpatience_des">The fort was first built as a stone trading lodge in 1697 at the request of the
        King of Acron, with whom the Dutch had a treaty, and which was situated between the kingdoms of Fante
        and Agona, with whom the British had a treaty. The executives of the Dutch West India Company were quite
        wary to establish a fort in an area with minimal trade, and only consented on the condition that it would
        be built at minimal costs. The Acron were not happy with this, and frequently threatened the Dutch with
        expulsion if they would not extend the fortifications. As a result, it took the Dutch five years to complete
        the building, which is why they gave it the name Fort Patience. \n \n
        By 1721 the lodge had been converted into a defensive fortification, which sat on a craggy peninsula just
        out from the township to the south, offering a commanding view of Apam\'s harbour to the north, and the
        Gulf Of Guinea coast to the south, east, and west. \n \n
        Opened: 1697 \n
        UNESCO World Heritage Site inscription: 1979 \n
        Occupant: Netherlands
    </string>
    <string name="fornassau_des">Located near Moree in the Central Region, Fort Nassau was the first fort built by
        the Dutch due to the unfamiliarity of the Dutch with buildings in the tropics. It was established on what
        became the Dutch Gold Coast and notorious for its unhealthy conditions. \n \n
        The Dutch, in 1624, expanded the fort. \n \n
        Fort Nassau served as the capital of the Dutch Gold Coast from its establishment until 1637, when the Dutch
        captured Fort Elmina from the Portuguese. \n \n
        From 1598 onward, Dutch merchants traded on the Gold Coast of Africa. Although the Gold Coast was already
        settled by Portuguese, there was little effort to evict the Dutch, as the military resources were committed
        to the war in Europe. \n \n
        This changed after the signing of the Twelve Years\' Truce between Portugal-Spain and the Dutch Republic in
        1609. The Portuguese now had sufficient resources to protect their trade monopoly, and began attacking the
        (from the Portuguese viewpoint, illegitimate) Dutch factories on the coast. The factory at Mouri was burned
        to the ground in 1610. Dutch traders then petitioned the States-General of the Dutch Republic to build a
        fort on the coast. The States-General was receptive of their demands, and sent Jacob Clantius, who was to
        become the first General on the Coast, to the Gold Coast in 1611. In 1612, the Treaty of Asebu was signed
        between the Dutch and the chief of Asebu, which allowed for the establishment of Fort Nassau at Mouri. \n \n
        Opened: 1612 \n
        Occupant: Netherlands
    </string>
    <string name="forcoen_des">Fort Coenraadsburg or Conraadsburg, also Fort São Tiago da Mina, is a small Portuguese
        chapel built in honor of Saint Jago and it is situated opposite the Elmina Castle in the Central region of
        Ghana, to protect Fort Elmina from attacks. Fort Conraadsburg was built in the 1660s. It was built on the
        site of a fortified chapel that the Portuguese had built and that the Dutch had burned to the ground in
        the Battle of Elmina (1637). The Dutch ceded the fort to Britain in 1872, together with the entire Dutch
        Gold Coast. Before the fort was built, the Dutch used the hill as a gun-position to bombard the Portuguese
        in the year 1637. To prevent others from doing the same tactic against the Portuguese, the Dutch constructed
        a fortified earthwork the following year. \n \n
        Opened: 1652 \n
        UNESCO World Heritage Site inscription: 1979 \n
        Occupant: Netherlands
    </string>
    <string name="forvic_des"> Constructed in 1821 on the site of a ruined fort built in 1712, Fort Victoria was
        formerly known as ‘Phipp’s Tower’, in honour of its initial constructor English Governor Phipps. It was
        later renamed Fort Victoria after Queen Victoria of Great Britain. \n \n
        Perched on a hill on the western part of the Cape Coast Township in the Central Region, the fort overlooks
        both the Atlantic Ocean and the historic town. Fort Victoria was used as an outlook post for signalling
        purposes. \n \n
        Fort Victoria has been preserved as a monument. The fort is in a respectable condition.
    </string>
    <string name="fordeg_des">Fort de Goede Hoop or Fort Good Hope was a fort on the Dutch Gold Coast, established in
        1667 near Senya Beraku. \n \n
        The Dutch had already had a lodge in Senya Beraku in the 1660s, but that was abandoned when the British
        built their fort at nearby Winneba. In 1704, the Dutch asked the Queen of Agona for permission to build a
        fort at Senya Beraku. It was to serve the gold trade with Akim, which is north of Agona. At first, the
        Dutch built a small triangular fort, that they called Fort de Goede Hoop (or Good Hope in English).
        The gold trade was not very prosperous, but later on slaves were sold at the fort. By 1715, the fort had
        become too small and the Dutch decided to double it in size by breaking away the diagonal and making it
        square-shaped. A slave prison was made in the southwest bastion of the fort. In the second half of the
        18th century, the fort was surrounded by an outer wall. \n \n
        Early in 1782, Captain Thomas Shirley in the 50-gun ship Leander and the sloop-of-war Alligator sailed to
        the Dutch Gold Coast. Britain was at war with The Netherlands and Shirley captured the small Dutch forts
        at Moree (Fort Nassau - 20 guns), Kormantin (Courmantyne or - 32 guns), Apam (Fort Lijdzaamheid or Fort
        Patience - 22 guns), Senya Beraku (Fort Goede Hoop - 18 guns), and Accra (Fort Crêvecoeur or Ussher Fort
        - 32 guns). \n \n
        The fort was occupied between 1782 and 1785 by Britain, as well as by the local Akim population between
        1811 and 1816. In 1868, the fort was ceded to the United Kingdom in a large trade of forts between the
        Netherlands and Britain. \n \n
        Opened: 1705 \n
        Occupant: Netherlands
    </string>
    <string name="oasis">Oasis Beach Resort</string>
</resources>